extension fix dialog close button overlap

--- a/src/app/components/top-bar/top-bar.scss
+++ b/src/app/components/top-bar/top-bar.scss
@@ -9,7 +9,12 @@
         margin-left: 16px;
     }
 
-    .no-grow {
+    .middle-section {
+        z-index: 10;
+    }
+
+    .right-section {
+        z-index: 1;
         flex-grow: 0;
     }
     .title {
